--- a/Vienna/Resources/en-AU.lproj/Localizable.strings
+++ b/Vienna/Resources/en-AU.lproj/Localizable.strings
@@ -1,11 +1,20 @@
 /* No comment provided by engineer. */
 "Are you sure you want to delete the messages in the Trash folder permanently?" = "Are you sure you want to delete the messages in the Bin folder permanently?";
 
+/* Title of a button on an alert */
+"Don’t Empty Trash" = "Don’t Empty Bin";
+
+/* Title of a button on an alert */
+"Empty Trash" = "Empty Bin";
+
 /* Title of a menu item */
 "Empty Trash…" = "Empty Bin…";
 
 /* No comment provided by engineer. */
 "The subscription for \"%@\" requires a user name and password for access." = "The subscription for “%@” requires a username and password for access.";
+
+/* Message text of an alert */
+"There are deleted articles in the trash. Would you like to empty the trash before quitting?" = "There are deleted articles in the bin. Would you like to empty the bin before quitting?";
 
 /* No comment provided by engineer. */
 "Trash" = "Bin";
