--- a/Vienna/Resources/da.lproj/Localizable.strings
+++ b/Vienna/Resources/da.lproj/Localizable.strings
@@ -171,11 +171,17 @@
 /* No comment provided by engineer. */
 "Descending" = "Nedadgående";
 
+/* Title of a checkbox on an alert */
+"Do not show this warning again" = "Vis ikke denne advarsel igen";
+
 /* No comment provided by engineer. */
 "Do you really want to import the subscriptions from the specified OPML file?" = "Vil du virkelig importere abonnementerne fra det specificerede OPML-arkiv?";
 
 /* test for a string */
 "does not contain" = "inderholder ikke";
+
+/* Title of a button on an alert */
+"Don’t Empty Trash" = "Tøm ikke Papirkurven";
 
 /* No comment provided by engineer. */
 "Download" = "Hent";
@@ -197,6 +203,9 @@
 
 /* Title of a button on an alert */
 "Empty" = "Tom";
+
+/* Title of a button on an alert */
+"Empty Trash" = "Tøm Papirkurven";
 
 /* Title of a menu item */
 "Empty Trash…" = "Tøm papirkurv…";
@@ -300,7 +309,7 @@
 /* No comment provided by engineer. */
 "HTTP code %d reported from server" = "HTTP-kode %d angivet af server";
 
-/* No comment provided by engineer. */
+/* Message text of an alert */
 "If you quit Vienna now, all downloads will stop." = "Hvis du slutter Vienna nu, vil alle overførsler stoppe.";
 
 /* Title of a button on an alert */
@@ -417,7 +426,7 @@
 /* Title of a button on an alert */
 "OK" = "OK";
 
-/* No comment provided by engineer. */
+/* Message text of an alert */
 "One or more downloads are in progress" = "En eller flere overførsler er igang";
 
 /* Title of a popup menu item */
@@ -644,6 +653,9 @@
 
 /* No comment provided by engineer. */
 "The subscription for \"%@\" requires a user name and password for access." = "Abonnementet for \"%@\" kræver et brugernavn og kodeord for at få adgang.";
+
+/* Message text of an alert */
+"There are deleted articles in the trash. Would you like to empty the trash before quitting?" = "Der er slettede artikler i Papirkurven. Vil du tømme Papirkurven før du afslutter?";
 
 /* No comment provided by engineer. */
 "This article contains an enclosed file." = "Denne artikel har en vedlagt fil.";
