--- a/Vienna/Resources/de.lproj/Localizable.strings
+++ b/Vienna/Resources/de.lproj/Localizable.strings
@@ -171,11 +171,17 @@
 /* No comment provided by engineer. */
 "Descending" = "Absteigend";
 
+/* Title of a checkbox on an alert */
+"Do not show this warning again" = "Diese Warnung nicht mehr anzeigen";
+
 /* No comment provided by engineer. */
 "Do you really want to import the subscriptions from the specified OPML file?" = "Möchtest du die Abonnements aus der angegebenen Datei wirklich importieren?";
 
 /* test for a string */
 "does not contain" = "beinhaltet nicht";
+
+/* Title of a button on an alert */
+"Don’t Empty Trash" = "Papierkorb nicht entleeren";
 
 /* No comment provided by engineer. */
 "Download" = "Laden";
@@ -197,6 +203,9 @@
 
 /* Title of a button on an alert */
 "Empty" = "Entleeren";
+
+/* Title of a button on an alert */
+"Empty Trash" = "Papierkorb entleeren";
 
 /* Title of a menu item */
 "Empty Trash…" = "Papierkorb entleeren …";
@@ -300,7 +309,7 @@
 /* No comment provided by engineer. */
 "HTTP code %d reported from server" = "Der Server lieferte den HTTP-Code %d";
 
-/* No comment provided by engineer. */
+/* Message text of an alert */
 "If you quit Vienna now, all downloads will stop." = "Möchtest du die laufenden Downloads unterbrechen und Vienna jetzt schließen?";
 
 /* Title of a button on an alert */
@@ -417,7 +426,7 @@
 /* Title of a button on an alert */
 "OK" = "OK";
 
-/* No comment provided by engineer. */
+/* Message text of an alert */
 "One or more downloads are in progress" = "Eine oder mehrere Dateien werden heruntergeladen.";
 
 /* Title of a popup menu item */
@@ -644,6 +653,9 @@
 
 /* No comment provided by engineer. */
 "The subscription for \"%@\" requires a user name and password for access." = "Der Zugriff auf den Feed %@ benötigt das Einloggen am Server.";
+
+/* Message text of an alert */
+"There are deleted articles in the trash. Would you like to empty the trash before quitting?" = "Es befinden sich gelöschte Artikel im Papierkorb. Möchtest du den Papierkorb vor dem Beenden entleeren?";
 
 /* No comment provided by engineer. */
 "This article contains an enclosed file." = "Dieser Artikel enthält einen Anhang.";
