--- a/Vienna/Resources/pt.lproj/Localizable.strings
+++ b/Vienna/Resources/pt.lproj/Localizable.strings
@@ -126,11 +126,17 @@
 /* No comment provided by engineer. */
 "Deleting folder \"%@\"…" = "A apagar pasta \"%@\"…";
 
+/* Title of a checkbox on an alert */
+"Do not show this warning again" = "Não voltar a mostrar este aviso";
+
 /* No comment provided by engineer. */
 "Do you really want to import the subscriptions from the specified OPML file?" = "Deseja realmente importar as subscrições do ficheiro OPML especificado?";
 
 /* test for a string */
 "does not contain" = "não contém";
+
+/* Title of a button on an alert */
+"Don’t Empty Trash" = "Não Esvaziar Lixo";
 
 /* Notification title */
 "Download completed" = "Download completo";
@@ -149,6 +155,9 @@
 
 /* Title of a button on an alert */
 "Empty" = "Vazio";
+
+/* Title of a button on an alert */
+"Empty Trash" = "Esvaziar Lixo";
 
 /* Data field name (Y/N) visible in menu/smart folder definition */
 "Enclosure" = "Anexo";
@@ -213,7 +222,7 @@
 /* No comment provided by engineer. */
 "HTTP code %d reported from server" = "Código HTTP %d devolvido pelo servidor";
 
-/* No comment provided by engineer. */
+/* Message text of an alert */
 "If you quit Vienna now, all downloads will stop." = "Se encerrar o Vienna agora, todos os downloads serão parados.";
 
 /* Title of a button on an alert */
@@ -306,7 +315,7 @@
 /* No comment provided by engineer. */
 "No new articles available" = "Nenhum artigo novo disponível";
 
-/* No comment provided by engineer. */
+/* Message text of an alert */
 "One or more downloads are in progress" = "Um ou mais downloads estão em progresso";
 
 /* Title of a popup menu item */
@@ -482,6 +491,9 @@
 
 /* No comment provided by engineer. */
 "The subscription for \"%@\" requires a user name and password for access." = "A subscrição de \"%@\" de nome de utilizador e palavra-passe para acesso.";
+
+/* Message text of an alert */
+"There are deleted articles in the trash. Would you like to empty the trash before quitting?" = "Existem artigos apagados no lixo. Deseja esvaziar o lixo antes de encerrar?";
 
 /* No comment provided by engineer. */
 "This article contains an enclosed file." = "Este artigo contém um ficheiro anexo.";
