--- a/Vienna/Resources/tr.lproj/Localizable.strings
+++ b/Vienna/Resources/tr.lproj/Localizable.strings
@@ -126,11 +126,17 @@
 /* No comment provided by engineer. */
 "Deleting folder \"%@\"…" = "\"%@\" klasörü siliniyor…";
 
+/* Title of a checkbox on an alert */
+"Do not show this warning again" = "Bu uyarıyı bir daha gösterme";
+
 /* No comment provided by engineer. */
 "Do you really want to import the subscriptions from the specified OPML file?" = "Abonelikleri seçili OPML dosyasından yüklemek istediğinize emin misiniz?";
 
 /* test for a string */
 "does not contain" = "içermez";
+
+/* Title of a button on an alert */
+"Don’t Empty Trash" = "Çöp kutusunu boşaltma";
 
 /* No comment provided by engineer. */
 "Download" = "İndir";
@@ -152,6 +158,9 @@
 
 /* Title of a button on an alert */
 "Empty" = "Boş";
+
+/* Title of a button on an alert */
+"Empty Trash" = "Çöp kutusunu boşalt";
 
 /* Data field name (Y/N) visible in menu/smart folder definition */
 "Enclosure" = "Ek";
@@ -219,7 +228,7 @@
 /* No comment provided by engineer. */
 "HTTP code %d reported from server" = "%d HTTP kodu sunucudan alındı";
 
-/* No comment provided by engineer. */
+/* Message text of an alert */
 "If you quit Vienna now, all downloads will stop." = "Eğer şimdi Vienna'dan çıkarsanız, tüm indirmeler durdurulacak.";
 
 /* Title of a button on an alert */
@@ -318,7 +327,7 @@
 /* Title of a button on an alert */
 "OK" = "Tamam";
 
-/* No comment provided by engineer. */
+/* Message text of an alert */
 "One or more downloads are in progress" = "Bir ya da daha fazla dosya indiriliyor";
 
 /* Title of a popup menu item */
@@ -491,6 +500,9 @@
 
 /* No comment provided by engineer. */
 "The subscription for \"%@\" requires a user name and password for access." = "\"%@\" için abonelik kullanıcı adı ve şifre gerektiriyor.";
+
+/* Message text of an alert */
+"There are deleted articles in the trash. Would you like to empty the trash before quitting?" = "Çöp kutusunda silinmiş makaleler bulunuyor. Çıkmadan önce onları silmek ister misiniz?";
 
 /* No comment provided by engineer. */
 "This article contains an enclosed file." = "Bu makale bir ek dosya içeriyor.";
