--- a/Vienna/Resources/en-AU.lproj/Localizable.strings
+++ b/Vienna/Resources/en-AU.lproj/Localizable.strings
@@ -1,4 +1,7 @@
 /* No comment provided by engineer. */
+"A new plugin has been installed. It is now available from the menu and you can add it to the toolbar." = "A new plug-in has been installed. It is now available from the menu and you can add it to the toolbar.";
+
+/* No comment provided by engineer. */
 "Are you sure you want to delete the messages in the Trash folder permanently?" = "Are you sure you want to delete the messages in the Bin folder permanently?";
 
 /* Title of a button on an alert */
@@ -7,8 +10,8 @@
 /* Title of a button on an alert */
 "Empty Trash" = "Empty Bin";
 
-/* Title of a menu item */
-"Empty Trash…" = "Empty Bin…";
+/* No comment provided by engineer. */
+"Plugin installed" = "Plug-in installed";
 
 /* No comment provided by engineer. */
 "The subscription for \"%@\" requires a user name and password for access." = "The subscription for “%@” requires a username and password for access.";
