--- a/Vienna/Resources/en-GB.lproj/Localizable.strings
+++ b/Vienna/Resources/en-GB.lproj/Localizable.strings
@@ -1,5 +1,23 @@
 /* No comment provided by engineer. */
+"A new plugin has been installed. It is now available from the menu and you can add it to the toolbar." = "A new plug-in has been installed. It is now available from the menu and you can add it to the toolbar.";
+
+/* No comment provided by engineer. */
+"A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "A new Vienna database cannot be created at “%@” because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete group folder \"%@\" and all sub folders? This operation cannot be undone." = "Are you sure you want to delete group folder “%@” and all sub folders? This operation cannot be undone.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to delete smart folder \"%@\"? This will not delete the actual articles matched by the search." = "Are you sure you want to delete smart folder “%@”? This will not delete the actual articles matched by the search.";
+
+/* No comment provided by engineer. */
 "Are you sure you want to delete the messages in the Trash folder permanently?" = "Are you sure you want to delete the messages in the Bin folder permanently?";
+
+/* No comment provided by engineer. */
+"Are you sure you want to unsubscribe from \"%@\"? This operation will delete all cached articles." = "Are you sure you want to unsubscribe from “%@”? This operation will delete all cached articles.";
+
+/* No comment provided by engineer. */
+"Deleting folder \"%@\"…" = "Deleting folder “%@”…";
 
 /* Title of a button on an alert */
 "Don’t Empty Trash" = "Don’t Empty Bin";
@@ -7,8 +25,17 @@
 /* Title of a button on an alert */
 "Empty Trash" = "Empty Bin";
 
-/* Title of a menu item */
-"Empty Trash…" = "Empty Bin…";
+/* No comment provided by engineer. */
+"Error loading script '%@'" = "Error loading script “%@”";
+
+/* No comment provided by engineer. */
+"Plugin installed" = "Plug-in installed";
+
+/* No comment provided by engineer. */
+"The \"%@\" folder cannot be created." = "The “%@” folder cannot be created.";
+
+/* No comment provided by engineer. */
+"The style \"%@\" has been installed to your Styles folder and added to the Style menu." = "The style “%@” has been installed to your Styles folder and added to the Style menu.";
 
 /* No comment provided by engineer. */
 "The subscription for \"%@\" requires a user name and password for access." = "The subscription for “%@” requires a username and password for access.";
@@ -17,7 +44,16 @@
 "There are deleted articles in the trash. Would you like to empty the trash before quitting?" = "There are deleted articles in the bin. Would you like to empty the bin before quitting?";
 
 /* No comment provided by engineer. */
+"Today's Articles" = "Today’s Articles";
+
+/* No comment provided by engineer. */
 "Trash" = "Bin";
+
+/* No comment provided by engineer. */
+"Vienna cannot open the file \"%@\" because it moved since you downloaded it." = "Vienna cannot open the file “%@” because it moved since you downloaded it.";
+
+/* No comment provided by engineer. */
+"Vienna cannot show the file \"%@\" because it moved since you downloaded it." = "Vienna cannot show the file “%@” because it moved since you downloaded it.";
 
 /* No comment provided by engineer. */
 "Vienna must upgrade its database to the latest version. This may take a minute or so. We apologize for the inconvenience." = "Vienna must upgrade its database to the latest version. This may take a minute or so. We apologise for the inconvenience.";
