--- a/Vienna/Interfaces/da.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/da.lproj/FeedCredentials.strings
@@ -16,3 +16,12 @@
 /* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "Brugernavnet og kodeordet du skal angive vil blive husket til næste gang du opdaterer dette abonnement.";
 
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "Lvs-Rd-GZy"; */
+"Lvs-Rd-GZy.title" = "Henvisning:";
+
+/* Class = "NSTextFieldCell"; title = "Details"; ObjectID = "VkU-PT-7wf"; */
+"VkU-PT-7wf.title" = "Detaljer";
+
+/* Class = "NSTextFieldCell"; title = "Feed:"; ObjectID = "yIO-aF-1Qg"; */
+"yIO-aF-1Qg.title" = "Feed:";
+
