--- a/Vienna/Interfaces/nl.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/nl.lproj/FeedCredentials.strings
@@ -16,3 +16,12 @@
 /* Class = "NSTextFieldCell"; title = "The user name and password you provide will be remembered for the next time you refresh this subscription."; ObjectID = "39"; */
 "39.title" = "De opgegeven gebruikersnaam en wachtwoord zullen worden opgeslagen, zodat je deze niet nog eens hoeft op te geven.";
 
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "Lvs-Rd-GZy"; */
+"Lvs-Rd-GZy.title" = "URL:";
+
+/* Class = "NSTextFieldCell"; title = "Details"; ObjectID = "VkU-PT-7wf"; */
+"VkU-PT-7wf.title" = "Details";
+
+/* Class = "NSTextFieldCell"; title = "Feed:"; ObjectID = "yIO-aF-1Qg"; */
+"yIO-aF-1Qg.title" = "Feed:";
+
