--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,11 @@ most recent build should be at the top of this file.
 
 Thanks!
 
+3.7.3
+-----
+- Fix copy of articles in article list
+- Update Sparkle to version 1.27.1
+
 3.7.2
 -----
 - Speed up database handling (the updated database remains fully compatible with all 3.x.x versions of Vienna)
